--- a/views/back/source_add.html
+++ b/views/back/source_add.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">文章内容</label>
-                    <div class="col-md-7">
+                    <div class="col-md-8">
                     <!--第三方编辑器-->
                         <div id="editor"></div>
                     </div>
@@ -90,11 +90,39 @@
                 });
 
             }
-
-            // 上传代码返回结果之后，将图片插入到编辑器中
-            // insert(imgUrl)
         };
-        editor.create()
+        editor.create();
+
+        // 3. 提交文章内容
+        $('form').on('submit', function () {
+            // 3.1 获取编辑器中的内容
+            let content = editor.txt.html();
+            if(content){
+                // 3.2 初始化上传数据
+                let formData = new FormData($(this).get(0));
+                formData.append('content', content);
+
+                $.ajax({
+                    url: $(this).attr('action'),
+                    type:$(this).attr('method'),
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (data) {
+                        console.log(data);
+                        if(data.status === 200){ // 添加成功
+                            alert('资源文章添加成功!');
+                            window.location.href = '/back/source_list'
+                        }else {
+                            alert('资源文章添加失败!');
+                        }
+                    }
+                });
+            }else {
+                alert('请输入文章的内容!');
+            }
+            return false;
+        });
     });
 </script>
 {% endblock %}
