有刷新分页

--- a/views/back/source_list.html
+++ b/views/back/source_list.html
@@ -57,6 +57,18 @@
             </div>
             {% endif%}
         </div>
+        <!-- 分页 -->
+        <ul class="pagination pull-right">
+            <li><a href="/back/source_list?page={{page-1}}">上一页</a></li>
+            {% for i in range(0,totalPage) -%}
+                {% if(i+1)===page %}
+                    <li class="active"><a href="/back/source_list?page={{i+1}}">{{i+1}}</a></li>
+                {% else %}
+                <li><a href="/back/source_list?page={{i+1}}">{{i+1}}</a></li>
+                {% endif %}
+            {%- endfor %}
+            <li><a href="/back/source_list?page={{page+1}}">下一页</a></li>
+        </ul>
     </div>
 </div>
 {% endblock %}
