无刷新分页

--- a/views/back/source_list.html
+++ b/views/back/source_list.html
@@ -17,7 +17,6 @@
             <a href="/back/source_add" class="btn btn-danger btn-sm pull-right">添加资源文章</a>
         </div>
         <div class="panel panel-default">
-            {% if sources.length>0 %}
             <table class="table table-bordered">
                 <thead>
                     <tr>
@@ -30,85 +29,114 @@
                         <th>操作</th>
                     </tr>
                 </thead>
-                <tbody>
-                <!--因为我们已经通过express集成了nunjucks模板，所有能够使用{}-->
-                {% for source in sources%}
-                    <tr>
-                        <td>{{loop.index}}</td>
-                        <td>{{source.title}}</td>
-                        <td>
-                            <img src="/uploads/{{source.small_img}}" alt="" style="width: 200px">
-                        </td>
-                        <td>{{source.is_store}}</td>
-                        <td>{{source.price}}</td>
-                        <td>{{source.author}}</td>
-                        <td>
-                            <a data-id="{{source._id}}" class="btn btn-primary btn-xs btn-edit">编辑</a>
-                            <a data-id="{{source._id}}" class="btn btn-danger btn-xs btn-del">删除</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
+                <tbody id="tbody"></tbody>
             </table>
-            {% else %}
-            <div>
-                <img src="./images/liao.jpg" style="width: 200px;margin: 0 auto;" alt="">
-                <h3 style="text-align: center">小撩温馨提示：页面还没有轮播图呦，赶紧去添加吧~</h3>
-            </div>
-            {% endif%}
         </div>
-        <!-- 分页 -->
-        <ul class="pagination pull-right">
-            <li><a href="/back/source_list?page={{page-1}}">上一页</a></li>
-            {% for i in range(0,totalPage) -%}
-                {% if(i+1)===page %}
-                    <li class="active"><a href="/back/source_list?page={{i+1}}">{{i+1}}</a></li>
-                {% else %}
-                <li><a href="/back/source_list?page={{i+1}}">{{i+1}}</a></li>
-                {% endif %}
-            {%- endfor %}
-            <li><a href="/back/source_list?page={{page+1}}">下一页</a></li>
-        </ul>
+        <!-- 无刷新分页 -->
+        <ul id="pagination" class="pagination pull-right"></ul>
     </div>
 </div>
 {% endblock %}
 
 <!--脚本-->
 {% block script %}
+<script src="./js/jquery.twbsPagination.js"></script>
 <script>
     $(function () {
-        //点击了修改按钮
-        $(".btn-edit").on("click",function(){
-            //将当前数据的id作为一个属性，绑定在“编辑”按钮上
-            let sourceId = $(this).attr("data-id");
-            //传递id
-            window.location.href = `/back/source_edit?sid=${sourceId}`;
-
+        //无刷新分页
+        //1.请求总页数
+        let pageSize = 2;
+        $.ajax({
+            url:"http://localhost:3040/back/source/api/count",
+            type:"get",
+            success:function (data) {
+                console.log(data);
+                if(data.status === 200){
+                    //初始化分页插件
+                    $('#pagination').twbsPagination({
+                        totalPages: Math.ceil(data.result / pageSize),
+                        visiblePages: 5,
+                        first:"首页",
+                        prev:"上一页",
+                        next:"下一页",
+                        last:"尾页",
+                        onPageClick: function (event, page) {
+                            //加载数据
+                            loadData(page);
+                            // $('#page-content').text('Page ' + page);
+                        }
+                    });
+                }else{
+                    alert("数据出现异常");
+                }
+            }
         });
-        //点击了删除按钮
-        $(".btn-del").on("click",function(){
-            //将当前数据的id作为一个属性，绑定在“编辑”按钮上
-            let sourceId = $(this).attr("data-id");
-            //发起ajax请求
+        function loadData(page){
             $.ajax({
-                url:"http://localhost:3040/back/source/api/remove/" + sourceId,
+                url:"http://localhost:3040/back/source/api/list",
                 type:"get",
+                data:{
+                    page:page,
+                    pageSize:pageSize
+                },
                 dataType:"json",
                 success:function (data) {
                     console.log(data);
-                    if(data.status === 200){
-                        alert("删除成功");
-                        window.location.reload();
-                    }else{
-                        alert("删除失败");
-                    }
+                    let tpl = ``;
+                    $(data.result).each((index,source)=>{
+                        tpl += `
+                            <tr>
+                                <td>${index}</td>
+                                <td>${source.title}</td>
+                                <td>
+                                    <img src="/uploads/${source.small_img}" alt="" style="width: 200px">
+                                </td>
+                                <td>${source.is_store}</td>
+                                <td>${source.price}</td>
+                                <td>${source.author}</td>
+                                <td>
+                                    <a data-id="${source._id}" class="btn btn-primary btn-xs btn-edit">编辑</a>
+                                    <a data-id="${source._id}" class="btn btn-danger btn-xs btn-del">删除</a>
+                                </td>
+                            </tr>
+
+                        `;
+                        $("#tbody").html(tpl);
+                    });
+                    //点击了修改按钮
+                    $(".btn-edit").on("click",function(){
+                        //将当前数据的id作为一个属性，绑定在“编辑”按钮上
+                        let sourceId = $(this).attr("data-id");
+                        //传递id
+                        window.location.href = `/back/source_edit?sid=${sourceId}`;
+
+                    });
+                    //点击了删除按钮
+                    $(".btn-del").on("click",function(){
+                        //将当前数据的id作为一个属性，绑定在“编辑”按钮上
+                        let sourceId = $(this).attr("data-id");
+                        //发起ajax请求
+                        $.ajax({
+                            url:"http://localhost:3040/back/source/api/remove/" + sourceId,
+                            type:"get",
+                            dataType:"json",
+                            success:function (data) {
+                                console.log(data);
+                                if(data.status === 200){
+                                    alert("删除成功");
+                                    window.location.reload();
+                                }else{
+                                    alert("删除失败");
+                                }
+                            }
+
+                        })
+
+                    });
                 }
 
             })
-
-        });
-
-
+        }
     });
 </script>
 {% endblock %}
