客户端详情数据注入

--- a/views/web/resources.html
+++ b/views/web/resources.html
@@ -80,7 +80,7 @@
 </div>
 <!--logo end-->
 
-
+<!--轮播图-->
 <div class="mainWrap clearfix">
 	<div class="banner_pagex">
     	<ul class="banner_box">
@@ -112,179 +112,8 @@
                     <li><a class="">最新</a></li>
                 </ul>
             </div>
-            <div class="sort_right">共有<span class="lm_desc_num">3732</span>条资源，供您选择学习</div>
-            <div class="resource_cons no_top">
-                <div class="resource_con">
-                <a href="/web/res_c">
-                    <div class="resource_con_pic">
-                        <img src="Images/resource_con_pic_1.jpg"/>
-                    </div>
-                    <div class="resource_con_title">走出幼儿园环境创设的误区</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico_ed.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_price">￥199</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_2.jpg"/>
-                    </div>
-                    <div class="resource_con_title">以问题为阶梯提升班级的工作</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_free">免费</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_3.jpg"/>
-                    </div>
-                    <div class="resource_con_title">走出幼儿园环境创设的误区</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico_ed.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_price">￥199</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_4.jpg"/>
-                    </div>
-                    <div class="resource_con_title">以问题为阶梯提升班级的工作</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_free">免费</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_1.jpg"/>
-                    </div>
-                    <div class="resource_con_title">走出幼儿园环境创设的误区</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico_ed.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_price">￥199</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_2.jpg"/>
-                    </div>
-                    <div class="resource_con_title">以问题为阶梯提升班级的工作</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_free">免费</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_3.jpg"/>
-                    </div>
-                    <div class="resource_con_title">走出幼儿园环境创设的误区</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico_ed.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_price">￥199</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_4.jpg"/>
-                    </div>
-                    <div class="resource_con_title">以问题为阶梯提升班级的工作</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_free">免费</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_2.jpg"/>
-                    </div>
-                    <div class="resource_con_title">走出幼儿园环境创设的误区</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico_ed.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_price">￥199</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_3.jpg"/>
-                    </div>
-                    <div class="resource_con_title">以问题为阶梯提升班级的工作</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_free">免费</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_4.jpg"/>
-                    </div>
-                    <div class="resource_con_title">走出幼儿园环境创设的误区</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico_ed.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_price">￥199</span>
-                    </div>
-                </a>
-                </div>
-                <div class="resource_con">
-                <a href="#">
-                    <div class="resource_con_pic">
-                        <img src="images/resource_con_pic_1.jpg"/>
-                    </div>
-                    <div class="resource_con_title">以问题为阶梯提升班级的工作</div>
-                    <div class="resource_con_other">
-                        <span class="resource_con_other_favico"><img src="images/fav_ico.png"/></span>
-                        <span class="resource_con_other_fav">收藏</span>
-                        <span class="resource_con_other_free">免费</span>
-                    </div>
-                </a>
-                </div>
-            </div>
-            <div class="page-boxs clearfix">
-                <div class="page-listx">
-                    <ul id="yw0" class="yiiPager">
-                        <li class="page"><a href="#">首页</a></li>
-                        <li class="page"><a href="#">上一页</a></li>
-                        <li class="page selected"><b>1</b></li>
-                        <li class="page"><a href="#">2</a></li>
-                        <li class="page"><a href="#">3</a></li>
-                        <li class="page"><a href="#">4</a></li>
-                        <li class="page"><a href="#">5</a></li>
-                        <li class="page"><a href="#">下一页</a></li>
-                        <li class="page"><a href="#">末页</a></li>
-                    </ul>
-                </div>
+            <div class="sort_right"></div>
+            <div id="source_list" class="resource_cons no_top">
             </div>
         </div>
     </div>
@@ -367,6 +196,72 @@
         <p>国家教育资源公共服务平台 版权所有 京ICP备0905918号-3</p>
     </div>
 </div>
+
+<script src="./Script/jquery-3.4.1.min.js"></script>
+<script>
+    $(function(){
+        //1.获取总记录数
+        $.ajax({
+            url:"http://localhost:3040/web/source/api/count",
+            type:"get",
+            success:function (data) {
+                console.log(data);
+                let html_t = ``;
+                if(data.status === 200){
+                    html_t = `共有<span class="lm_desc_num">${data.result}</span>条资源，供您选择学习`;
+                }else{
+                    html_t = `共有<span class="lm_desc_num">0</span>条资源，供您选择学习`;
+                }
+                $(".sort_right").html(html_t);
+            }
+        });
+        //2.加载数据
+        loadData();
+    });
+    function loadData(page,pageSize,sortBy) {
+        //1.过滤数据
+        page = page || 1;
+        pageSize = pageSize || 100;
+        sortBy = sortBy || "more";
+        //2.请求数据
+        $.ajax({
+            url:"http://localhost:3040/web/source/api/list",
+            data:{
+                page:page,
+                pageSize:pageSize,
+                sortBy:sortBy
+            },
+            type:"get",
+            success:function (data) {
+                //3.数据注入界面
+                if(Array.isArray(data.result)&&data.result.length>0){
+                    let tpl = ``;
+                    $(data.result).each((index,source)=>{
+                        tpl += `
+                          <div class="resource_con">
+                                <a href="/web/res_c?s_id=${source._id}">
+                                    <div class="resource_con_pic">
+                                        <img src="/uploads/${source.small_img}"/>
+                                    </div>
+                                    <div class="resource_con_title">${source.title}</div>
+                                    <div class="resource_con_other">
+                                        <span class="resource_con_other_price">￥${source.price}</span>
+                                    </div>
+                                </a>
+                            </div>
+                        `;
+                    });
+                    $("#source_list").html(tpl);
+                }
+            }
+        })
+    }
+</script>
+
+
+
+
+
 
 </body>
 
