--- a/views/web/resources_content.html
+++ b/views/web/resources_content.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!doctype html>
+<html lang="zh-cn">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>幼教服务系统</title>
 <meta name="keywords" content="幼教服务系统"/>
 <meta name="description" content="幼教服务系统" />
@@ -98,44 +98,7 @@
             </div>
             <div class="resource_cons no_top">
                 <div class="resource_cons_left">
-                    <div class="resource_cons_left_top">
-                        <div class="resource_cons_left_top_title">
-                            育儿专家张思莱：高质量的陪伴是孩子最好的玩具！
-                        </div>
-                        <div class="resource_cons_left_top_desc">
-                            <div class="resource_cons_left_top_descx"><img src="images/copyright_ico.png"/>来自：刘晶波教授</div>
-                            <div class="resource_cons_left_top_descx"><img src="images/view_ico.png"/>1888</div>
-                            <div class="resource_cons_left_top_descx"><img src="images/date_ico.png"/>2018/07/24</div>
-                        </div>
-                    </div>
-                    <div class="resource_cons_left_left" id="LeftTool">
-                        <div class="s-ewm">
-                            <img src="images/s-ewm.jpg">
-                            <div>微信扫码手机浏览</div>
-                        </div>
-                        <div class="share-title through" data-bossirs="share"><span>分享</span></div>
-                        <div class="share" data-bosszone="share">
-                            <a class="wxWrap"><i class="iconfont icon-icon-"></i><div class="qrcode hidden"><div id="qrcode" title=""><canvas width="113" height="113" style="display: none;"></canvas><img alt="Scan me!" src="" style="display: block;"></div></div></a>
-                            <a class="qqWrap"><i class="iconfont icon-qq1"></i></a>
-                            <a class="kjWrap"><i class="iconfont icon-qqkongjian"></i></a>
-                            <a class="wbWrap"><i class="iconfont icon-weibo1"></i></a>
-                        </div>
-                        <div class="comment-count-title through"><span>评论</span></div>
-                        <a target="_blank" id="cmtLink" class="comment-count" data-bosszone="pls" data-bossirs="pls" href="http://coral.qq.com/3271358992"><span></span><span></span><span></span><div class="text"><i id="cmtNum">680</i></div></a>
-                    </div>
-                    <div class="resource_cons_left_right">
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                        <p class="one-p">【环球网综合报道】据韩联社10月28日报道，韩国国防部一位负责人当天表示，朝鲜和韩国等有关方面针对“解除板门店共同警备区(JSA)武装”的共同检查工作已于昨日结束。由此，朝韩民众与外国游客等最快将从下月起自由出入共同警备区。</p>
-                    </div>
-                    <div class="resource_cons_left_bottom">
-                        <div class="comment_box">
-                        </div>
-                    </div>
+
                 </div>
                 <div class="resource_cons_right">
                     <div class="resource_cons_right_rank">
@@ -309,6 +272,60 @@
         <p>国家教育资源公共服务平台 版权所有 京ICP备0905918号-3</p>
     </div>
 </div>
+
+<script src="./Script/jquery-3.4.1.min.js"></script>
+<script>
+    $(function () {
+        //1.截取列表页传递过来的id
+        let url = window.location.search;let sourceId="";
+        if(url.indexOf("?")!==-1){//有？
+            sourceId = url.substr(url.indexOf("=")+1);
+        }
+        //2.发起ajax请求
+        $.ajax({
+            url:"http://localhost:3040/web/source/api/content/" + sourceId,
+            type:"get",
+            success:function (data) {
+                console.log(data);
+                let tpl = `
+                    <div class="resource_cons_left_top">
+                        <div class="resource_cons_left_top_title">${data.result.title}</div>
+                        <div class="resource_cons_left_top_desc">
+                            <div class="resource_cons_left_top_descx"><img src="images/copyright_ico.png"/>${data.result.author}</div>
+                            <div class="resource_cons_left_top_descx"><img src="images/view_ico.png"/>${data.result.read_count}</div>
+                            <div class="resource_cons_left_top_descx"><img src="images/date_ico.png"/>${data.result.add_time}</div>
+                        </div>
+                    </div>
+                    <div class="resource_cons_left_left" id="LeftTool">
+                        <div class="s-ewm">
+                            <img src="images/s-ewm.jpg">
+                            <div>微信扫码手机浏览</div>
+                        </div>
+                        <div class="share-title through" data-bossirs="share"><span>分享</span></div>
+                        <div class="share" data-bosszone="share">
+                            <a class="wxWrap"><i class="iconfont icon-icon-"></i><div class="qrcode hidden"><div id="qrcode" title=""><canvas width="113" height="113" style="display: none;"></canvas><img alt="Scan me!" src="" style="display: block;"></div></div></a>
+                            <a class="qqWrap"><i class="iconfont icon-qq1"></i></a>
+                            <a class="kjWrap"><i class="iconfont icon-qqkongjian"></i></a>
+                            <a class="wbWrap"><i class="iconfont icon-weibo1"></i></a>
+                        </div>
+                        <div class="comment-count-title through"><span>评论</span></div>
+                        <a target="_blank" id="cmtLink" class="comment-count" data-bosszone="pls" data-bossirs="pls" href="http://coral.qq.com/3271358992"><span></span><span></span><span></span><div class="text"><i id="cmtNum">680</i></div></a>
+                    </div>
+                    <div class="resource_cons_left_right">${data.result.content}</div>
+                    <div class="resource_cons_left_bottom">
+                        <div class="comment_box">
+                        </div>
+                    </div>
+                `;
+                $(".resource_cons_left").html(tpl);
+
+            }
+        });
+    });
+</script>
+
+
+
 
 </body>
 
