阅读数增加

--- a/views/web/resources_content.html
+++ b/views/web/resources_content.html
@@ -321,6 +321,15 @@
 
             }
         });
+        //3.阅读数+1
+        $.ajax({
+            url:"/web/source/api/content/read_count/" + sourceId,
+            type:"get",
+            success:function (data) {
+                console.log(data.result);
+            }
+        })
+
     });
 </script>
 
