--- a/views/back/aside.html
+++ b/views/back/aside.html
@@ -24,12 +24,18 @@
                 </a>
             </li>
             <li>
+                <a href="/back/s_list">
+                    <i class="fa fa-calculator"></i>
+                    轮播图管理
+                </a>
+            </li>
+            <li>
                 <a href="javascript:;">
                     <i class="fa fa-object-group"></i>
                     用户管理
                     <i class="arrow fa fa-angle-right"></i>
                 </a>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled" style="display: block">
                     <li>
                         <a href="/back/u_center">
                             用户中心
@@ -40,33 +46,6 @@
                             用户信息
                         </a>
                     </li>
-                </ul>
-            </li>
-            <li>
-                <a href="docent_list.html">
-                    <i class="fa fa-bars"></i>
-                    运营中心
-                </a>
-            </li>
-            <li>
-                <a href="/back/s_list">
-                    <i class="fa fa-calculator"></i>
-                    轮播图管理
-                </a>
-            </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="fa fa-cog"></i>
-                    设置中心
-                    <i class="arrow fa fa-angle-right"></i>
-                </a>
-                <ul class="list-unstyled">
-                    <li><a href="javascript:;">站点设置</a></li>
-                    <li><a href="javascript:;">用户设置</a></li>
-                    <li><a href="javascript:;">角色管理</a></li>
-                    <li><a href="javascript:;">课程设置</a></li>
-                    <li><a href="javascript:;">运营设置</a></li>
-                    <li><a href="javascript:;">财务设置</a></li>
                 </ul>
             </li>
         </ul>
